--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
+    
+    <!-- Preload critical assets -->
+    <link rel="preload" href="/Home Images/Swakop Landmarks.jpg" as="image" />
+    <link rel="preload" href="/Home Images/tour guide.jpg" as="image" />
   </head>
 
   <body>
