--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>p-871534</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <title>Kalahari Axarob Tours</title>
+    <meta name="description" content="Experience the beauty of Namibia with Kalahari Axarob Tours" />
+    <meta name="author" content="Kalahari Axarob Tours" />
+    <link rel="icon" type="image/png" href="/Kalahari Axarob Tours Icon.png" />
+    <link rel="apple-touch-icon" href="/Kalahari Axarob Tours Icon.png" />
     
     <!-- Preload critical assets -->
     <link rel="preload" href="/Home Images/Swakop Landmarks.jpg" as="image" />
